k8s/sqaaas-api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
 name: sqaaas-apis-svc
spec:
 selector:
   role: sqaaas-api
 type: NodePort
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 20495
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqaaas-api-deploy
  labels:
    role: sqaaas-api
spec:
  selector:
    matchLabels:
      role: sqaaas-api
  template:
    metadata:
      labels:
        role: sqaaas-api
    spec:
      containers:
      - name: sqaaas-api-dev
        image: danielgtaylor/apisprout
        args: ["https://raw.githubusercontent.com/EOSC-synergy/sqaaas-api-spec/prototype/1.0/build/dist.yaml"]
      - name: sqaaas-api-stage
        image: eoscsynergy/sqaaas-api-stage
        volumeMounts:
        - name: sqaaas-persistent-storage
          mountPath: /sqaaas
        - name: sqaaas-creds-volume
          mountPath: /etc/sqaaas
          readOnly: true
      - name: sqaaas-api-proxy
        image: eoscsynergy/sqaaas-api-nginx
      volumes:
      - name: sqaaas-persistent-storage
        persistentVolumeClaim:
          claimName: sqaaas-pv-claim
      - name: sqaaas-creds-volume
        projected:
          sources:
          - secret:
              name: github-token
              items:
              - key: .gh_token
                path: .gh_token
          - secret:
              name: jenkins-token
              items:
              - key: .jk_token
                path: .jk_token
