k8s/sqaaas-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqaaas-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sqaaas-api-deployment
  template:
    metadata:
      labels:
        run: sqaaas-api-deployment
    spec:
      containers:
      - name: sqaaas-api
        image: eoscsynergy/sqaaas-api-server:latest
        volumeMounts:
        - name: sqaaas-api-persistent-storage
          mountPath: /sqaaas
        - name: sqaaas-api-creds-volume
          mountPath: /etc/sqaaas
          readOnly: true
      volumes:
      - name: sqaaas-api-persistent-storage
        persistentVolumeClaim:
          claimName: sqaaas-api-pv-claim
      - name: sqaaas-api-creds-volume
        projected:
          sources:
          - secret:
              name: github-token
              items:
              - key: .gh_token
                path: .gh_token
          - secret:
              name: jenkins-token
              items:
              - key: .jk_token
                path: .jk_token
---
apiVersion: v1
kind: Service
metadata:
  name: sqaaas-api-service
spec:
  selector:
    run: sqaaas-api-deployment
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sqaaas-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: /sqaaas
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /sqaaas/?(.*)
          backend:
            service:
              name: sqaaas-api-service
              port:
                number: 80
